feat: implement user api prototype